Added "/" before all links to see if it works.

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap"
     rel="stylesheet">
-  <link rel="stylesheet" href="src/style.css">
+  <link rel="stylesheet" href="/src/style.css">
   <title>Tomteverkstaden - Startsida</title>
 </head>
 
@@ -35,8 +35,8 @@
           </div>
           <ul>
             <li><a href="/">Startsida</a></li>
-            <li><a href="products.html">Produkter</a></li>
-            <li><a href="about.html">Om oss</a></li>
+            <li><a href="/products.html">Produkter</a></li>
+            <li><a href="/about.html">Om oss</a></li>
           </ul>
         </nav>
       </div>
@@ -89,7 +89,7 @@
           <h3 class="text-2xl">Tomten med pojken</h3>
           <p>Skapa julstämning i hemmet med denna charmiga dekorationsfigur föreställande en snäll, traditionellt klädd
             tomte tillsammans med [...]</p>
-          <a href="#">Till produkten</a>
+          <a href="/product.html">Till produkten</a>
         </article>
         <article class="custom-product-article bg-slate-700 p-2">
           <div>
@@ -98,7 +98,7 @@
           <h3 class="text-2xl">Tomten med flickan</h3>
           <p>Denna vackra juldekoration föreställer en vänlig tomte i en silver- och vitfärgad dräkt, rikligt dekorerad
             med detaljer som skapar [...]</p>
-          <a href="#">Till produkten</a>
+          <a href="/product.html">Till produkten</a>
         </article>
         <article class="custom-product-article bg-slate-700 p-2">
           <div>
@@ -107,7 +107,7 @@
           <h3 class="text-2xl">Tomten med renen</h3>
           <p>Denna detaljrika julfigur föreställer en varm och vänlig tomte klädd i en ljus vinterdräkt med
             silverglittrande [...]</p>
-          <a href="#">Till produkten</a>
+          <a href="/product.html">Till produkten</a>
         </article>
       </div>
     </aside>
