--- a/product.html
+++ b/product.html
@@ -35,8 +35,8 @@
                 </div>
                 <ul>
                     <li><a href="/">Startsida</a></li>
-                    <li><a href="products.html">Produkter</a></li>
-                    <li><a href="about.html">Om oss</a></li>
+                    <li><a href="/products.html">Produkter</a></li>
+                    <li><a href="/about.html">Om oss</a></li>
                 </ul>
             </nav>
         </div>
