--- a/products.html
+++ b/products.html
@@ -9,7 +9,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap"
         rel="stylesheet">
-    <link rel="stylesheet" href="src/style.css">
+    <link rel="stylesheet" href="/src/style.css">
     <title>Tomteverkstaden - Produkter</title>
 </head>
 
@@ -35,8 +35,8 @@
                 </div>
                 <ul>
                     <li><a href="/">Startsida</a></li>
-                    <li><a href="products.html">Produkter</a></li>
-                    <li><a href="about.html">Om oss</a></li>
+                    <li><a href="/products.html">Produkter</a></li>
+                    <li><a href="/about.html">Om oss</a></li>
                 </ul>
             </nav>
         </div>
